--- a/flatpak-sync/units/user/flatpak-installation-sync.service
+++ b/flatpak-sync/units/user/flatpak-installation-sync.service
@@ -1,16 +1,16 @@
 [Unit]
-Description=Manage system flatpaks
+Description=Manage user defined flatpaks
 Wants=network-online.target
 After=network-online.target
-StartLimitBurst=1
-StartLimitIntervalSec=10min
+StartLimitBurst=10
+StartLimitIntervalSec=60min
 
 [Service]
 Type=oneshot
 ExecCondition=/bin/bash -c '[[ "$(busctl get-property org.freedesktop.NetworkManager /org/freedesktop/NetworkManager org.freedesktop.NetworkManager Metered | cut -c 3-)" == @(2|4) ]]'
-ExecStart=/usr/libexec/flatpak-sync install --system
+ExecStart=/usr/bin/flatpak-installation-sync install
 Restart=on-failure
-# RestartSec=60s
+RestartSec=20s
 
 [Install]
 WantedBy=multi-user.target
